--- a/acmer/src/main/resources/application.yml
+++ b/acmer/src/main/resources/application.yml
@@ -2,9 +2,13 @@ spring:
   #数据库配置
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
+    # 本地127.0.0.1:3306
+    # 云服务器 39.101.68.205:3306
     url: jdbc:mysql://127.0.0.1:3306/acmer?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf8&autoReconnect=true&allowMultiQueries=true
     username: root
     password: 20020326
+    # 本地20020326
+    # 云服务器 12345678
   #若不存在表，项目启动时新建表
   sql:
     init:
